src/App.css
/* --- Document --- */

html,
body {
    width: 100%;
    height: 100%;

    /* Prevent pinch-to-zoom on iOS Safari */
    touch-action: pan-x pan-y;
}

html {
    overflow: hidden;
}

body {
    overflow-y: hidden;
}

/* --- App container --- */

/* On mobile, fill the viewport. */
.app {
    width: 100%;
    height: 100%;
}

/* On desktop, create a two-column layout. */
@media (min-width: 800px) {
    .app {
        display: flex;
    }
}

/* --- Incident list --- */

/* On mobile, hide the list by default, and absolutely position it. */
.incidentList {
    position: absolute;
    z-index: 2;
    top: 70px;
    width: 100vw;
    height: calc(var(--innerVh) - 70px); /* Viewport height minus the header. */
    overflow-y: scroll;
    background: #333;
    color: #fff;
    opacity: 0;
    visibility: hidden;
    transition: opacity 0.3s, visibility 0.3s;
}

/* On desktop, always show the list in a column on the left. */
@media (min-width: 800px) {
    .incidentList {
        position: static;
        width: 350px;
        height: 100vh;
        overflow-y: hidden;
        opacity: 1;
        visibility: visible;
    }
}

/* On mobile, show/hide the list when the Show Incidents button is toggled. */
.incidentList.visible {
    opacity: 1;
    visibility: visible;
    transition: opacity 0.3s, visibility 0.3s;
}

.incidentList > h2 {
    font-size: 1em;
    padding: 10px;
    display: none;
}

/* Display the incident list heading on desktop only. */
@media (min-width: 800px) {
    .incidentList > h2 {
        display: block;
    }
}

.incidentList ul {
    list-style: none;
    margin: 0 0 80px 0; /* Add bottom margin to work around a bug/issue with iPhone Safari in landscape. */
    padding: 0;
    font-size: 0.8em;
    border-top: 1px solid #888;
}

/* On desktop, absolutely position the list below the heading and make it scrollable. */
@media (min-width: 800px) {
    .incidentList ul {
        position: absolute;
        top: 70px;
        width: 350px;
        height: calc(var(--innerVh) - 70px);
        overflow-y: scroll;
    }
}

.incidentList ul li {
    display: flex;
    gap: 10px;
    padding: 10px;
    border-bottom: 1px solid #888;
}

.incidentList ul li:hover {
    padding: 10px;
    background: #666;
}

.incidentList ul li h2 {
    font-size: 1em;
    padding: 10px;
}

.incidentList ul li h2,
.incidentList ul li p {
    margin: 0;
    padding: 0;
}

/* --- Incident list header with button --- */

/* On mobile, display the header at the top of the screen. */
.incidentListHeader {
    position: absolute;
    top: 0;
    z-index: 3;
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: calc(100% - 20px);
    height: 50px;
    padding: 10px;
    background: #333;
    color: #fff;
    font-weight: bold;
    border-bottom: 1px solid #888;
}

/* On desktop, hide the header. */
@media (min-width: 800px) {
    .incidentListHeader {
        display: none;
    }
}

/* --- Map container --- */

/* On mobile, position the map absolutely and give it a 100% width. */
.mapContainer {
    position: absolute !important; /* Override inline style applied by react-google-maps */
    z-index: 1;
    top: 70px;
    width: 100vw;
    height: calc(var(--innerVh) - 70px); /* Viewport height minus the header. */
    color: #333;
}

/* On desktop, position the map relatively and allow room for the left-hand incident list sidebar. */
@media (min-width: 800px) {
    .mapContainer {
        position: relative !important; /* Override inline style applied by react-google-maps */
        top: 0;
        flex-grow: 1;
        width: calc(100vw - 350px);
        height: var(--innerVh);
    }
}

/* ---Map styles --- */

/* Remove the blue border around InfoWindow close buttons. */
button.gm-ui-hover-effect:focus {
    outline: none;
}

